refactor(sirius): Register `TransactionWorkBus` as a singleton bean, `SiriusApplicationService` can be extended by application service and domain service
[crust]: Add login rand for api service token.